nlamah/src/main/resources/org/nlamah/QBase/QL/test/error/doubleDeclaration5.ql
form test
{
	question5 number "test1"
	question5 boolean "test2"
}